// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle test default snapshot testing 1`] = `
<PageTitle
  title="Title"
>
  <Flex
    data-ouia-component-type="page-title"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe={true}
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <div
          className="pf-m-spacer-sm"
        >
          <Title
            headingLevel="h1"
            size="4xl"
          >
            <h1
              className="pf-c-title pf-m-4xl"
            >
              Title
            </h1>
          </Title>
        </div>
      </FlexItem>
    </div>
  </Flex>
</PageTitle>
`;

exports[`PageTitle test snapshot testing with extra 1`] = `
<PageTitle
  extra={
    <Label>
      Label
    </Label>
  }
  title="Title"
>
  <Flex
    data-ouia-component-type="page-title"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-flex"
      data-ouia-component-type="page-title"
      data-ouia-safe={true}
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <div
          className="pf-m-spacer-sm"
        >
          <Title
            headingLevel="h1"
            size="4xl"
          >
            <h1
              className="pf-c-title pf-m-4xl"
            >
              Title
            </h1>
          </Title>
        </div>
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <div
          className="pf-m-spacer-sm"
        >
          <Label>
            <span
              className="pf-c-label"
            >
              <span
                className="pf-c-label__content"
              >
                Label
              </span>
            </span>
          </Label>
        </div>
      </FlexItem>
    </div>
  </Flex>
</PageTitle>
`;
